# euclid_robot_movement_controller

./: CHANGELOG.rst  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: movement_control.cfg
launch/: robot_movement_controller.launch
msg/: RobotGoal.msg
src/: robot_move_ctrl_nodelet.cpp  robot_move_ctrl_nodelet.h
